2006-05-24  Ilija Koco  <ilijak@siva.com.mk>

	* cdl/hal_arm_mac7100_mace1.cdl: 
	* include/plf_io.h:
	* include/hal_platform_ints.h: 
	* include/hal_platform_setup.h: 
	* include/mace1_misc.h:
	* include/pkgconf/mlt_arm_mac7100_mace1_rom.ldi: 
	* include/pkgconf/mlt_arm_mac7100_mace1_rom.h: 
	* src/mace1_misc.c: 
	New HAL added to support the SIvA MACE1 board. Adapted from the
	EB55 by Nick Garnett


//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2003 Nick Garnett <nickg@calivar.com>
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available
// in accordance with section (3) of the GNU General Public License.
//
// This exception does not invalidate any other reasons why a work based on